Disable branchif/branchnil/branchunless optimization

The comment for this block says:

  This is super nasty hack!!!

In addition to apparently being a nasty hack, it's not
always correct, as it misoptimizes the following code
leading to a stack consistency error or crash:

  def f;x = false; y = (return until x unless x);end;f

Someone with more experience with the optimizer and iseqs
should review the code and determine how it can be
changed to not break in the above code, and determine if
it is worth keeping the optimization.  For now, the safe
solution is to just disable the optimization.

Fixes [Bug #16695]