test/ruby/test_iseq.rb
@@ -198,7 +198,9 @@ class TestISeq < Test::Unit::TestCase
     body = compile(src, __LINE__, {peephole_optimization: true}).to_a[13]
     labels = body.select {|op, arg| op == :branchnil}.map {|op, arg| arg}
     assert_equal(1, labels.uniq.size)
-  end if (!defined?(Coverage) || !Coverage.running?)
+  # Disable this test until the branchif/branchnil/branchunless
+  # optimization is debugged and reenabled.
+  end if (!defined?(Coverage) || !Coverage.running?) && false
 
   def test_parent_iseq_mark
     assert_separately([], <<-'end;', timeout: 20)
